<resources>

    <string name="app_name">FreePIE IMU</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">FreePIE IMU</string>
    <string name="target_ip">Target IP</string>
    <string name="target_port">Target port</string>
    <string name="start">Start</string>
    <string name="send_raw">Send raw data</string>
    <string name="send_orientation">Send orientation</string>
    <string name="acc">Accelerometer</string>
    <string name="debug">Debug</string>
    <string name="gyr">Gyro</string>
    <string name="mag">Magnometer</string>
    <string name="imu">Orientation</string>
    <string name="index">Index</string>
    <string name="debug_no_data">(no data)</string>
    <string name="cutoff_frequency">Cutoff frequency</string>
    <string name="cycles_per_second">Hz</string>
    <string name="sampling_frequency">Sampling frequency</string>
    <string name="fs10">10 Hz</string>
    <string name="fs25">25 Hz</string>
    <string name="fs50">50 Hz</string>
        
</resources>