<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <LinearLayout
                android:id="@+id/grid_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:baselineAligned="false"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblIp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/target_ip" />

                <EditText
                    android:id="@+id/ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/grid_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:baselineAligned="false"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/target_port" />

                <EditText
                    android:id="@+id/port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

        <Spinner
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/layout_host" />

        <Spinner
            android:id="@+id/sensors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/index" />

        <LinearLayout
            android:id="@+id/producerOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/sensors"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >
        </LinearLayout>

        <ToggleButton
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/producerOptions"
            android:text="@string/start" />

        <CheckBox
            android:id="@+id/debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/start"
            android:text="@string/debug" />

        <LinearLayout
            android:id="@+id/debugView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/debug"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium"
                    android:text="@string/acc" />

                <TextView
                    android:id="@+id/acc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium"
                    android:text="@string/gyr" />

                <TextView
                    android:id="@+id/gyr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium"
                    android:text="@string/mag" />

                <TextView
                    android:id="@+id/mag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium"
                    android:text="@string/imu" />

                <TextView
                    android:id="@+id/imu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>